objects/Account.object
<CustomObject
    <fields>
        <fullName>Commercial_Sub_Type__c</fullName>
        <description>Used to further categorize Commercial accounts  - access to edit is given in permission set: Visibility of Commercial Sub-Type field - Will only have options when dealer type = Commercial</description>
        <label>Commercial Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Dealer_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Institutions (Banks, Credit Unions or Private Lenders)</fullName>
                </value>
                <value>
                    <fullName>Rental Car Companies</fullName>
                </value>
                <value>
                    <fullName>Fleet Management Companies</fullName>
                </value>
                <value>
                    <fullName>OEM&apos;s</fullName>
                </value>
                <value>
                    <fullName>Captive Finance Companies</fullName>
                </value>
                <value>
                    <fullName>Third Party Remarketing Companies</fullName>
                </value>
                <value>
                    <fullName>Repossession Forwarder&apos;s</fullName>
                </value>
                <value>
                    <fullName>Dealer based Finance Companies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors_In_Play__c</fullName>
        <inlineHelpText>Enter where the Franchise Dealer is sending their Wholesale cars that they are not sending to ACV</inlineHelpText>
        <label>Competitors In Play</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compliant_Dealer_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Filled in with a workflow based on dealer doc fields related to document type and compliant check box</description>
        <label>Compliant Dealer License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliant_Resale_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated with a workflow rule that looks at the dealer doc record document type and compliant checkbox</description>
        <label>Compliant Resale Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <label>Primary Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Call N/A Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copado_Test__c</fullName>
        <description>testing new field</description>
        <label>Copado Test</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Vehicles_Listed__c</fullName>
        <description>Populates with value from Declarative Roll up that counts how many vehicles a seller has listed throughout their history on ACV</description>
        <label>Count of Vehicles Listed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Account_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will remain unchecked for a validation rule to verify accounts cannot be created unless the user is a System Administrator</description>
        <label>Create Account Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creation_Source__c</fullName>
        <description>Field indicating how this record was created, used to filter records created through bulk creation processes to avoid mass email send outs</description>
        <label>Creation Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk Load</fullName>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <description>Stage that dealership currently is in i.e: APP DL (app hs been downloaded) NOT DL (not downloaded) FOLLOW UP (dealership has a question or issue using app) etc etc</description>
        <label>Current Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Grade__c</fullName>
        <defaultValue>&quot;Standard&quot;</defaultValue>
        <label>Customer Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Challenged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Health__c</fullName>
        <description>Used to rate the dealers health and used in a formula field to display the check engine light images</description>
        <inlineHelpText>This field is used as a rating on the account to reflect the health of the dealer  - Changing this field will change the Health Status image.</inlineHelpText>
        <label>Customer Health</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Stage_Buy__c</fullName>
        <label>Customer Stage Buy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registrered</fullName>
                </value>
                <value>
                    <fullName>Idle</fullName>
                </value>
                <value>
                    <fullName>Trying</fullName>
                </value>
                <value>
                    <fullName>Loyal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Success_Advocate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Success Advocate - replacing the Title Consultant field</description>
        <inlineHelpText>Please reach out to the Customer Success Advocate for title statuses of “New” and “48 Hour Notice”. Customer Success Advocate has replaced the Title Consultant field.</inlineHelpText>
        <label>Customer Success Advocate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts73Aq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Success Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <description>Doing Business As</description>
        <label>DBA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIST_PHL__c</fullName>
        <formula>Distance(Geolocation(BillingLatitude, BillingLongitude), Geolocation(39.9241, -75.1591), &apos;mi&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DIST_PHL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DL_File_In_Tools__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DL File in Tools</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOT_Number__c</fullName>
        <label>DOT Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_ID__c</fullName>
        <description>Dealers Dun &amp; Bradstreet ID</description>
        <inlineHelpText>Dealers Dun &amp; Bradstreet ID</inlineHelpText>
        <label>D&amp;B ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Back_in_Good_Standing__c</fullName>
        <description>Date that the back in good standing option was selected for the Title hold field</description>
        <label>Date Back in Good Standing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Do_Not_Send_Titles__c</fullName>
        <description>Date that the title hold field is marked as do not send titles</description>
        <label>Date Do Not Send Titles</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Joined__c</fullName>
        <formula>IF(DATEVALUE(CreatedDate) &lt; DATE(2019,07,06),Original_Date_Joined__c , CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Joined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_License_Received__c</fullName>
        <label>Date License # Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Most_Recent_Arb__c</fullName>
        <label>Date Most Recent Arb</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Registered__c</fullName>
        <label>Date Registered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <description>Date that the documents were posted for review</description>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Tax_ID_Received__c</fullName>
        <label>Date Tax ID Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Compliant__c</fullName>
        <description>The date a dealer becomes document compliant.  If they fall out of compliance, the field goes blank, and re-fills when they become compliant again.</description>
        <inlineHelpText>The date a dealer becomes document compliant.  If they fall out of compliance, the field goes blank, and will re-populate when/if they become compliant again.</inlineHelpText>
        <label>Date Time Compliant</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Demo__c</fullName>
        <label>Date of Demo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Deny__c</fullName>
        <description>Date Buyer&apos;s Assurance Upsell picklist is set to &quot;Date of Deny&quot;</description>
        <label>Date of Deny</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Buy__c</fullName>
        <label>Date of First Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Sale__c</fullName>
        <description>The date an account first sold a vehicle.</description>
        <label>Date of First Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Goodwill__c</fullName>
        <description>Date Buyer&apos;s Assurance Upsell picklist is set to &quot;Goodwill&quot;</description>
        <label>Date of Goodwill</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Purchase__c</fullName>
        <label>Date of Last Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Sale__c</fullName>
        <label>Date of Last Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Retro_Charge__c</fullName>
        <description>Date Buyer&apos;s Assurance Upsell picklist is set to &quot;Retro Charge&quot;</description>
        <label>Date of Retro Charge</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Between_Demo_and_FTB__c</fullName>
        <description>Calculates days between date of first purchase and date of demo on the account</description>
        <formula>Date_of_First_Buy__c - Date_of_Demo__c</formula>
        <label>Days Between Demo and FTB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_Ignition_and_FTB__c</fullName>
        <description>Calculates days between date of first purchase and the last ignition call on the account</description>
        <formula>Date_of_First_Buy__c - Last_Ignition_Call__c</formula>
        <label>Days Between Ignition and FTB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_Sign_Up_and_Compliance__c</fullName>
        <formula>Date_Time_Compliant__c -   Date_Joined__c</formula>
        <label>Days Between Sign Up and Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_Sign_Up_and_FTB__c</fullName>
        <description>Calculates number of days between date of first purchase and date of sign up</description>
        <formula>Date_of_First_Buy__c - DATEVALUE(Date_Joined__c)</formula>
        <label>Days Between Sign Up and FTB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Auction_STR__c</fullName>
        <description>Calculates Dealers STR at the auction level using hidden fields: Seller&apos;s Total Auctions and Successful Auctions</description>
        <formula>(Seller_s_Successful_Auctions__c /  Seller_s_Total_Auctions__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Auction STR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dealer_Bank_Account_Owner_Email__c</fullName>
        <label>Dealer Bank Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Bank_Account_Owner_First_Name__c</fullName>
        <label>Dealer Bank Account Owner First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Bank_Account_Owner_Last_Name__c</fullName>
        <label>Dealer Bank Account Owner Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Doc_Compliance__c</fullName>
        <label>Dealer Doc Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Out Of Compliance</fullName>
                    <default>true</default>
                    <label>Out Of Compliance</label>
                </value>
                <value>
                    <fullName>Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Docs_Email_Wave__c</fullName>
        <label>Dealer Docs Email Wave</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Phone__c</fullName>
        <formula>Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Phone (main)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Phone_fax__c</fullName>
        <formula>Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Phone (fax)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <label>Dealer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Franchise</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Independent</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Independent - ACV Certified</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Wholesaler</label>
                </value>
                <value>
                    <fullName>Dealer Group (Parent Account)</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Commercial</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Vehicle_STR__c</fullName>
        <description>Calculates the Dealers STR at the vehicle level, using hidden fields: Vehicles successfully sold and count of vehicles listed.</description>
        <formula>( Vehicles_Successfully_Sold__c  /Count_of_Vehicles_Listed__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Vehicle STR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dealership_Annual_Revenue__c</fullName>
        <description>Dealerships Annual Revenue from Dun &amp; Bradstreet</description>
        <inlineHelpText>Dealerships Annual Revenue from Dun &amp; Bradstreet</inlineHelpText>
        <label>Dealership Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealership_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Dealer ID from Tools</inlineHelpText>
        <label>Dealer ID</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Dealership_Notes__c</fullName>
        <label>Dealership Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Declined_Doc_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Declined Doc Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Payment_Provider__c</fullName>
        <description>This field indicated the default payment provider for a dealership. It maps to the default_dealership_payment_provider table in acv_prod</description>
        <label>Default Payment Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Providers</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Seller_Fee__c</fullName>
        <label>Default Seller Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DelightedInc__Detractors__c</fullName>
        <label>Delighted Detractors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DelightedInc__NPS__c</fullName>
        <label>Delighted NPS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DelightedInc__Passives__c</fullName>
        <label>Delighted Passives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DelightedInc__Promoters__c</fullName>
        <label>Delighted Promoters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo_Completed_By__c</fullName>
        <label>Demo Completed By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Type__c</fullName>
        <label>Demo Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Demo</fullName>
                </value>
                <value>
                    <fullName>Quick Hit Demo</fullName>
                </value>
                <value>
                    <fullName>Post FTB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Comments__c</fullName>
        <label>Discovery Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_you_buy_online__c</fullName>
        <label>Do you buy online</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other/See notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doc_Title_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a temporary field that is being used to mark accounts as having been out of document compliance before 11/1 - This will not become unchecked once they have returned their documents.
Field to be deprecated. - MM 11/8/21</description>
        <inlineHelpText>Titles were held AT SOME POINT, not necessarily actively held. See open/active title cases to know if titles are currently being held.</inlineHelpText>
        <label>xDoc Title Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Dealer_Cert_Expires__c</fullName>
        <label>xDealership Cert Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Dealer_Cert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xDealership Cert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Resale_Cert_Expires__c</fullName>
        <label>xResale Cert Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Resale_Cert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xResale Cert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Received</fullName>
                    <default>true</default>
                    <label>Not Received</label>
                </value>
                <value>
                    <fullName>Attached for Review</fullName>
                </value>
                <value>
                    <fullName>Reviewed Accepted</fullName>
                </value>
                <value>
                    <fullName>Reviewed Not Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drivably_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if this is a Drivably account - syncs with mysql IO-1590</description>
        <label>Drivably Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Checker_Record_Type__c</fullName>
        <description>This field is used in Matching Rules and is populated by a trigger with the DeveloperName of the Record Type</description>
        <label>Duplicate Checker Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to identify duplicate accounts</description>
        <inlineHelpText>Account populated here will be the primary account which is kept after duplicate cleanup is completed</inlineHelpText>
        <label>Duplicate Of</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Duplicates</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFT_Bill_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used on the transportation account to denote preferred payment method inside of Netsuite</description>
        <label>EFT Bill Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EIN_Number__c</fullName>
        <description>A Taxpayer Identification Number is an identifying number used for tax purposes in the United States and is used for transporters that ship vehicles for ACV.</description>
        <label>EIN Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Number__c</fullName>
        <label>Experian Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__BIN_Response_Code__c</fullName>
        <label>BIN Response Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-1</fullName>
                    <default>true</default>
                    <label>-1</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__BIN_Status_Code__c</fullName>
        <label>BIN Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>N</label>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__BIN_formula__c</fullName>
        <formula>if(EXPRN__Exp_Business__r.EXPRN__BIN__c != null &amp;&amp; EXPRN__Exp_Business__r.EXPRN__BIN__c != &apos;&apos;, EXPRN__Exp_Business__r.EXPRN__BIN__c, EXPRN__Exp_Business__r.EXPRN__Global_BIN__c)</formula>
        <label>BIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Batch_Scoring_Model__c</fullName>
        <label>Batch Scoring Model</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Policy__c</fullName>
        <description>Credit policy used for batch decision</description>
        <label>Credit Policy</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Date_Added__c</fullName>
        <label>Date Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_Business_Name__c</fullName>
        <label>Experian Business Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Experian Business record</description>
        <label>Experian Business</label>
        <referenceTo>EXPRN__Experian_Business__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Business_ID__c</fullName>
        <formula>EXPRN__Exp_Business__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Experian Business ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Is_Monitored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Monitored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Most_Recent_Decision_Status__c</fullName>
        <label>Most Recent Decision Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Most_Recent_Decision__c</fullName>
        <formula>IF(EXPRN__Most_Recent_Decision_Status__c == &quot;Approve&quot; , EXPRN__Most_Recent_Decision_Status__c + &quot; &quot; + IMAGE(&quot;/resource/EXPRN__Approve&quot;, &quot;Approve&quot;), 

IF(EXPRN__Most_Recent_Decision_Status__c  ==  &quot;Decline&quot;,EXPRN__Most_Recent_Decision_Status__c + &quot; &quot; + IMAGE(&quot;/resource/EXPRN__CreditDecisionDecline&quot;, &quot;Decline&quot;), 

IF(EXPRN__Most_Recent_Decision_Status__c == &quot;Manual Review&quot;,EXPRN__Most_Recent_Decision_Status__c + &quot; &quot; +  IMAGE(&quot;/resource/EXPRN__CreditDecisionManualReview&quot;, &quot;Manual Review&quot;), &quot; &quot; 
) 
) 
)</formula>
        <label>Most Recent Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__SFDC_Sync_Flag__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <description>Required to Mark Records that are picked for Business Refresh by SFDC_BIQ_Business_Refresh_Request Job</description>
        <label>SFDC Sync Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Scoring_Model__c</fullName>
        <label>Scoring Model</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EXPRN__isBatchBusinessUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>States whether record is available for business update</description>
        <label>isBatchBusinessUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__isBatchDecisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBatchDecisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__isBatchProcessing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBatchProcessing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__isBatchScoring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the record is available for scoring or not</description>
        <label>isBatchScoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__isInternational__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__owner1Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Experian Owner/Guarantor Lookup1</label>
        <referenceTo>EXPRN__Owner_Grant__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>